update logo clan

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 <div class="wrapper-normal">
   <div class="header-home">
     <div>
-      <img class="bio-head" alt="TeamID Logo" src="{{ site.url }}/images/clan-logo.jpeg" />
+      <img class="bio-head" alt="TeamID Logo" src="{{ site.url }}/images/clan-logo.png" />
     </div>
     <div class="social-links">
       <a class="social" href="https://instagram.com/" target="_blank">
